--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,23 @@ h1, h2 {
   font-size: calc(3px + 2vmin);
   color: #8C0B0B;
   font-family: poem;
+
 }
+
+.poem2 {
+  background-color: #020202;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(3px + 2vmin);
+  color: #EA1A1A;
+  font-family: poem;
+  line-height: 10%;
+	letter-spacing: 3%;
+}
+
 
 @keyframes custom-animation {
   from {
