--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,18 @@ h1, h2, h3 {
 	letter-spacing: 3%;
 }
 
+.secretInput {
+  background-color: #020202;
+  min-height: 100vh;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  font-size: calc(3px + 2vmin);
+  color: #EA1A1A;
+  font-family: poem;
+}
+
 .secretInput input {
   font-size: calc(3px + 2vmin);
   width: 50%;
@@ -98,7 +110,7 @@ h1, h2, h3 {
   opacity: 1; /* Firefox */
 }
 
-.happy {
+.scene {
   background-color: #020202;
   min-height: 100vh;
   display: flex;
