--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,30 @@ h1, h2, h3 {
   opacity: 1; /* Firefox */
 }
 
+.secretInput button {
+    background-color: #020202;
+    border: 3px dashed #EA1A1A;
+    color: #EA1A1A;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 8px 20px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.secretInput button:hover {
+  background-color: #EA1A1A;
+  color: #020202;
+}
+
+.secretInput button:focus {
+  background-color: #510303;
+  color: #020202;
+}
+
 .scene {
   background-color: #020202;
   min-height: 100vh;
